--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# requirements.txt
 streamlit>=1.28.0
 tensorflow>=2.13.0
 numpy>=1.24.0
@@ -12,3 +11,6 @@ scikit-learn>=1.3.0
 # For deployment (optional)
 streamlit-option-menu>=0.3.6
 streamlit-extras>=0.3.0
+
+# Needed for downloading model from Google Drive
+gdown>=4.7.1
